[gd_scene load_steps=13 format=2]

[ext_resource path="res://asset/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ruolo.gd" type="Script" id=2]
[ext_resource path="res://Pop_team.gd" type="Script" id=3]
[ext_resource path="res://asset/Pop_team.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="ImageTexture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]

[node name="Pop_team" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2056.0
margin_bottom = 1192.0
color = Color( 0.156863, 0.196078, 0.392157, 1 )

[node name="Immessi" type="Label" parent="ColorRect"]
margin_left = 100.0
margin_top = 750.0
margin_right = 1825.0
margin_bottom = 850.0
custom_fonts/font = SubResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 80.0
margin_top = 300.0
margin_right = 1825.0
margin_bottom = 660.0
rect_scale = Vector2( 1.1, 1.1 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1745.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_constants/separation = 50

[node name="Campi" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 847.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="HBox_name" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Campi"]
margin_right = 847.0
margin_bottom = 100.0
size_flags_vertical = 3

[node name="Nome" type="Label" parent="MarginContainer/HBoxContainer/Campi/HBox_name"]
margin_right = 421.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Nome
"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/Campi/HBox_name"]
margin_left = 425.0
margin_right = 847.0
margin_bottom = 100.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
align = 1
caret_blink = true

[node name="HBox_roles" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Campi"]
margin_top = 130.0
margin_right = 847.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ruolo" type="Label" parent="MarginContainer/HBoxContainer/Campi/HBox_roles"]
margin_right = 421.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Ruolo"
align = 1
valign = 1

[node name="ruolo" type="OptionButton" parent="MarginContainer/HBoxContainer/Campi/HBox_roles"]
margin_left = 425.0
margin_right = 847.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Ruolo"
align = 1
icon_align = 1
expand_icon = true
script = ExtResource( 2 )

[node name="_force" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Campi"]
margin_top = 260.0
margin_right = 847.0
margin_bottom = 360.0
size_flags_vertical = 3

[node name="Forza" type="Label" parent="MarginContainer/HBoxContainer/Campi/_force"]
margin_right = 421.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "Forza
"
align = 1
valign = 1

[node name="enter_force" type="SpinBox" parent="MarginContainer/HBoxContainer/Campi/_force"]
margin_left = 425.0
margin_right = 847.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_icons/updown = SubResource( 10 )
max_value = 10.0
step = 0.05
align = 1

[node name="Comandi" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 897.0
margin_right = 1745.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="Salva" type="Button" parent="MarginContainer/HBoxContainer/Comandi"]
margin_right = 848.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Salva giocatore"

[node name="Vedi immessi" type="Button" parent="MarginContainer/HBoxContainer/Comandi"]
margin_top = 130.0
margin_right = 848.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Vedi immessi"

[node name="Salva_su_disco" type="Button" parent="MarginContainer/HBoxContainer/Comandi"]
margin_top = 260.0
margin_right = 848.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Salva team su disco e prosegui"

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 8.0
margin_top = 744.0
margin_right = 2056.0
margin_bottom = 976.0

[node name="Concludi team" type="Button" parent="MarginContainer2"]
margin_left = 468.0
margin_top = 91.0
margin_right = 1580.0
margin_bottom = 140.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Torna al menu iniziale (le modifiche andranno perse)"

[connection signal="text_entered" from="MarginContainer/HBoxContainer/Campi/HBox_name/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/Campi/HBox_roles/ruolo" to="." method="_on_ruolo_item_selected"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/Campi/_force/enter_force" to="." method="_on_enter_force_value_changed"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Comandi/Salva" to="." method="_on_Salva_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Comandi/Vedi immessi" to="." method="_on_Vedi_immessi_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Comandi/Salva_su_disco" to="." method="_on_Salva_su_disco_button_up"]
[connection signal="button_up" from="MarginContainer2/Concludi team" to="." method="_on_Concludi_team_button_up"]
